# whatsapp-rust

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/scripts/: bench-comment.py  iai-to-benchmark-json.py
.github/workflows/: benchmark-comment.yml  benchmark.yml  claude-code-review.yml  claude.yml  copilot-setup-steps.yml  e2e.yml  main.yml  release.yml
agent_docs/: feature_implementation.md  protocol_architecture.md
examples/: benchmark.rs
http_clients/ureq-client/: Cargo.toml
http_clients/ureq-client/src/: lib.rs
src/: appstate_sync.rs  bot.rs  cache.rs  cache_config.rs  cache_store.rs  client.rs  download.rs  handshake.rs  history_sync.rs  jid_utils.rs  keepalive.rs  lib.rs  lid_pn_cache.rs  main.rs  mediaconn.rs  message.rs  pair.rs  pair_code.rs  pdo.rs  pending_device_sync.rs  portable_cache.rs  prekeys.rs  receipt.rs  request.rs  retry.rs  send.rs  sender_key_device_cache.rs  session.rs  spam_report.rs  test_utils.rs  transport.rs  unified_session.rs  upload.rs  usync.rs  version.rs
src/client/: context_impl.rs  device_registry.rs  lid_pn.rs  sender_keys.rs  sessions.rs
src/features/: blocking.rs  chat_actions.rs  chatstate.rs  community.rs  contacts.rs  groups.rs  media_reupload.rs  mex.rs  mod.rs  newsletter.rs  polls.rs  presence.rs  profile.rs  signal.rs  status.rs  tctoken.rs
src/handlers/: basic.rs  chatstate.rs  ib.rs  iq.rs  message.rs  mod.rs  notification.rs  presence.rs  receipt.rs  router.rs  traits.rs  unimplemented.rs
src/socket/: error.rs  noise_socket.rs
src/store/: persistence_manager.rs  signal.rs  signal_adapter.rs
src/types/: enc_handler.rs
storages/sqlite-storage/: Cargo.toml
storages/sqlite-storage/src/: schema.rs  sqlite_store.rs
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: app_state.rs  chat_actions.rs  community.rs  device_cache.rs  digest_key.rs  groups.rs  lid_sessions.rs  media.rs  memory_soak.rs  messaging.rs  newsletter.rs  offline_groups.rs  offline_messages.rs  offline_receipts.rs  prekey_sessions.rs  presence.rs  privacy_tokens.rs  profile.rs  profile_picture.rs  receipts.rs  session_reuse.rs
transports/tokio-transport/: Cargo.toml
transports/tokio-transport/src/: lib.rs
wacore/: Cargo.toml
wacore/appstate/: Cargo.toml
wacore/appstate/src/: decode.rs  encode.rs  errors.rs  hash.rs  lib.rs  lthash.rs  patch_decode.rs
wacore/benches/: send_receive_benchmark.rs
wacore/binary/: Cargo.toml
wacore/binary/benches/: binary_benchmark.rs
wacore/binary/src/: attrs.rs  builder.rs  decoder.rs  encoder.rs  jid.rs  lib.rs  marshal.rs  node.rs  util.rs
wacore/derive/: Cargo.toml
wacore/derive/src/: lib.rs
wacore/libsignal/: Cargo.toml
wacore/libsignal/benches/: libsignal_benchmark.rs
wacore/libsignal/src/core/: address.rs  curve.rs
wacore/libsignal/src/core/curve/: curve25519.rs
wacore/libsignal/src/crypto/: aes_cbc.rs  aes_gcm.rs  hash.rs
wacore/libsignal/src/protocol/: crypto.rs  error.rs  group_cipher.rs  protocol.rs  sender_keys.rs  session.rs  session_cipher.rs
wacore/libsignal/src/protocol/ratchet/: keys.rs
wacore/libsignal/src/protocol/state/: session.rs
wacore/libsignal/src/protocol/storage/: traits.rs
wacore/libsignal/src/store/: record_helpers.rs  sender_key_name.rs
wacore/noise/: Cargo.toml
wacore/noise/src/: framing.rs  handshake.rs  state.rs
wacore/src/: adv.rs  appstate_sync.rs  download.rs  history_sync.rs  ib.rs  lib.rs  media_retry.rs  message_processing.rs  messages.rs  net.rs  pair.rs  pair_code.rs  poll.rs  prekeys.rs  proto_helpers.rs  reporting_token.rs  request.rs  runtime.rs  send.rs  session.rs  sticker_pack.rs  time.rs  upload.rs  usync.rs
wacore/src/client/: context.rs
wacore/src/iq/: blocklist.rs  business.rs  chatstate.rs  community.rs  contacts.rs  devices.rs  dirty.rs  groups.rs  mediaconn.rs  mex.rs  mod.rs  newsletter.rs  node.rs  prekeys.rs  privacy.rs  profile.rs  props.rs  spam_report.rs  spec.rs  tctoken.rs  usync.rs
wacore/src/protocol/: mod.rs  retry.rs
wacore/src/stanza/: business.rs  devices.rs  groups.rs  message.rs  mod.rs  notification.rs  receipt.rs
wacore/src/store/: ab_props.rs  cache.rs  commands.rs  device.rs  in_memory.rs  mod.rs  persistence.rs  signal_cache.rs  traits.rs
wacore/src/types/: call.rs  events.rs  jid.rs  lid_pn.rs  message.rs  presence.rs  spam_report.rs  user.rs
wacore/tests/: appstate_external_mutations_test.rs  binary_protocol_test.rs  noise_handshake_test.rs
waproto/: Cargo.toml  build.rs
waproto/src/: whatsapp.proto  whatsapp.rs
