[package]
name = "wacore"
version = "0.5.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
description = "Core WhatsApp protocol implementation without runtime dependencies"

[features]
default = ["simd"]
simd = ["wacore-appstate/simd"]
debug-diagnostics = []
debug-snapshots = []
# Enable JS-based random number generation for wasm32 targets.
# Activates getrandom's wasm_js backend so rand works in the browser.
js = ["getrandom/wasm_js"]

[dependencies]
aes = { workspace = true }
aes-gcm = { workspace = true }
anyhow = { workspace = true }
async-channel = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["now", "serde"] }
ctr = { workspace = true }
event-listener = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true, features = ["std"] }
getrandom = { workspace = true, optional = true }
hex = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
log = { workspace = true }
md5 = "0.8.0"
once_cell = { version = "1.21", default-features = false, features = ["std"] }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
portable-atomic = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde-big-array = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
sha1 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
typed-builder = "0.23"
wacore-appstate = { workspace = true }
wacore-binary = { workspace = true, features = ["serde"] }
wacore-derive = { workspace = true }
wacore-libsignal = { workspace = true }
wacore-noise = { workspace = true }
waproto = { workspace = true }

[dev-dependencies]
iai-callgrind = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[[bench]]
name = "reporting_token_benchmark"
harness = false
