[package]
name = "wacore-binary"
version = "0.5.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
description = "Binary data and constants for WhatsApp protocol"

[package.metadata.cargo-shear]
ignored = ["phf"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["simd"]
simd = []
serde = ["dep:serde", "compact_str/serde"]

[dependencies]
bytes = { workspace = true }
compact_str = { workspace = true }
flate2 = { workspace = true }
phf = { version = "0.13.1", default-features = false }
serde = { workspace = true, optional = true }
stable_deref_trait = "1.2.0"
yoke = { workspace = true }

[build-dependencies]
phf_codegen = "0.13.1"
serde = { workspace = true, features = ["alloc"] }
serde_json = { workspace = true, features = ["std"] }

[dev-dependencies]
iai-callgrind = { workspace = true }

[[bench]]
name = "binary_benchmark"
harness = false
