[package]
name = "wacore-derive"
version = "0.5.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
description = "Derive macros for wacore protocol types"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
